Fix mobile responsive styles for Employee and Schedule pages
- Add comprehensive mobile styles for employee page (nav, cards, sidebars)
- Fix button overlapping issue in employee nav search
- Add mobile styles for schedule page (nav, modals, cards)
- Fix schedule card layout issues on mobile
- Improve modal responsiveness for smaller screens

--- a/src/styles/EmployeeLayout.css
+++ b/src/styles/EmployeeLayout.css
@@ -665,5 +665,353 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
+
+}
+
+/* Mobile responsive styles */
+@media screen and (max-width: 650px) {
+  .employ-nav {
+    height: auto;
+    min-height: 20vh;
+    padding-left: 4vw;
+    padding-right: 4vw;
+    padding-top: 2vh;
+    padding-bottom: 2vh;
+  }
+
+  .employ-nav-top {
+    height: auto;
+    flex-wrap: wrap;
+    gap: 2vw;
+  }
+
+  .employ-nav-top h2 {
+    font-size: 5vw;
+  }
+
+  .employ-nav-top h5 {
+    font-size: 3.5vw;
+  }
+
+  .employ-nav-top img {
+    width: 7vw;
+  }
+
+  .employ-nav-search {
+    height: auto;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 2vw;
+    padding-left: 0;
+    padding-top: 2vh;
+  }
+
+  .employ-nav-search-icon {
+    width: 5vw;
+    margin-right: -8vw;
+    z-index: 5;
+  }
+
+  .employ-nav-search input {
+    width: 100%;
+    height: 6vh;
+    font-size: 3.5vw;
+    padding-left: 10vw;
+    border-radius: 4vw;
+  }
+
+  /* Action buttons row */
+  .employ-nav-search > div,
+  .employ-nav-search {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2vw;
+  }
+
+  .employ-filter-btn {
+    width: 12vw;
+    height: 12vw;
+    border-radius: 50%;
+    flex-shrink: 0;
+  }
+
+  .employ-filter-btn img {
+    width: 5vw;
+  }
+
+  .employ-filter-waiting {
+    width: auto;
+    min-width: 45%;
+    flex: 1;
+    height: 10vw;
+    font-size: 2.8vw;
+    border-radius: 5vw;
+    padding: 0 3vw;
+    gap: 1.5vw;
+  }
+
+  .employ-filter-waiting img {
+    width: 4vw;
+  }
+
+  .employ-filter-send {
+    width: auto;
+    min-width: 45%;
+    flex: 1;
+    height: 10vw;
+    font-size: 2.8vw;
+    border-radius: 5vw;
+    padding: 0 3vw;
+    gap: 1.5vw;
+  }
+
+  .employ-filter-send img {
+    width: 4vw;
+  }
+
+  .employ-filter-add {
+    width: 100%;
+    height: 10vw;
+    font-size: 3vw;
+    border-radius: 5vw;
+    gap: 2vw;
+  }
+
+  .employ-filter-add img {
+    width: 4vw;
+  }
+
+  /* Employee cards grid - mobile */
+  .employ-body {
+    padding: 4vw;
+    padding-top: 48vw;
+    grid-template-columns: 1fr;
+    gap: 4vw;
+  }
+
+  .employCard {
+    width: 100%;
+    height: auto;
+    min-height: 50vw;
+    border-radius: 4vw;
+  }
+
+  .employCard h2 {
+    font-size: 4.5vw;
+  }
+
+  .employCard-top {
+    padding: 3vw 3vw 0 3vw;
+    gap: 3vw;
+  }
+
+  .employCard-checkbox {
+    width: 5vw;
+    height: 5vw;
+  }
+
+  .employCard-masterJob {
+    min-width: 15vw;
+    height: 6vw;
+    margin-left: 0;
+    border-radius: 2vw;
+    padding: 0 2vw;
+  }
+
+  .employCard-masterJob p {
+    font-size: 2.8vw;
+  }
+
+  .employCard-menuBtn {
+    width: 8vw;
+    height: 8vw;
+  }
+
+  .employCard-menuBtn img {
+    width: 6vw !important;
+  }
+
+  .employCard img {
+    width: 15vw;
+  }
+
+  .employCard-img {
+    width: 15vw;
+    height: 15vw;
+  }
+
+  .employCard-rating p {
+    font-size: 3.5vw;
+  }
+
+  .employCard-rating img {
+    width: 4vw;
+    height: 4vw;
+  }
+
+  .employCard-bottom {
+    padding: 3vw;
+    border-bottom-left-radius: 4vw;
+    border-bottom-right-radius: 4vw;
+  }
+
+  .employCard-bottom img {
+    width: 4vw;
+  }
+
+  .employCard-email,
+  .employCard-number {
+    font-size: 3.2vw;
+    gap: 2vw;
+    margin-bottom: 1vw;
+  }
+
+  .employCard-workedTimes {
+    gap: 3vw;
+    padding: 1vw;
+  }
+
+  .employCard-workedTimes h1 {
+    font-size: 5vw;
+  }
+
+  .employCard-workedTimes p {
+    font-size: 2.8vw;
+  }
+
+  .employCard-workedTimes button {
+    width: 60%;
+    height: 8vw;
+    font-size: 2.8vw;
+    border-radius: 4vw;
+  }
+
+  .employCard-menu {
+    width: 45vw;
+    height: auto;
+    left: auto;
+    right: 0;
+    top: 12vw;
+    border-radius: 3vw;
+  }
+
+  .employCard-menu div {
+    height: 10vw;
+    padding: 2vw 3vw;
+    gap: 3vw;
+  }
+
+  .employCard-menu div p {
+    font-size: 3.5vw;
+  }
+
+  .employCard-menu div img {
+    width: 4vw;
+  }
+
+  /* Sidebars - mobile */
+  .editEmployeeBar {
+    width: 85vw;
+    border-radius: 5vw 0 0 5vw;
+  }
+
+  .editEmployeeBar-cont {
+    width: 85vw;
+    padding: 5vw 4vw;
+  }
+
+  .editEmployeeBar-cont-img {
+    width: 20vw;
+    height: 20vw;
+  }
+
+  .editEmployeeBar-cont-info label {
+    font-size: 3.5vw;
+  }
+
+  .editEmployeeBar-cont-info input {
+    height: 10vw;
+    font-size: 3.5vw;
+    padding: 2vw;
+    border-radius: 2vw;
+  }
+
+  .editEmployeeBar-rating p {
+    font-size: 3.5vw;
+  }
+
+  .editEmployeeBar-rating img {
+    width: 4vw;
+  }
+
+  .editEmployeeBar-cont-bottom {
+    height: 15vw;
+    border-bottom-left-radius: 5vw;
+  }
+
+  .editEmployeeBar-cont-bottom-cancel,
+  .editEmployeeBar-cont-bottom-save {
+    font-size: 3.5vw;
+    border-radius: 3vw;
+  }
+
+  .aboutEmployeeBar {
+    width: 85vw;
+    padding: 4vw;
+    border-radius: 5vw 0 0 5vw;
+  }
+
+  .aboutEmployeeBar-cont-img {
+    width: 20vw;
+    height: 20vw;
+  }
+
+  .aboutEmployeeBar-masterJob {
+    font-size: 3vw;
+    height: 7vw;
+    min-width: 20vw;
+    border-radius: 2vw;
+  }
+
+  .aboutEmployeeBar-cont-info h3 {
+    font-size: 4.5vw;
+  }
+
+  .aboutEmployeeBar-cont-rating {
+    font-size: 3.5vw;
+  }
+
+  .aboutEmployeeBar-cont-rating img {
+    width: 4vw;
+  }
+
+  .aboutEmployeeBar-cont-selectinfo {
+    height: auto;
+    gap: 2vw;
+  }
+
+  .aboutEmployeeBar-cont-selectinfo-item {
+    padding: 3vw;
+    border-radius: 3vw;
+  }
+
+  .aboutEmployeeBar-cont-selectinfo-item img {
+    width: 5vw;
+  }
+
+  .aboutEmployeeBar-cont-selectinfo-item p {
+    font-size: 3.5vw;
+  }
+
+  .aboutEmployeeBar-cont-close {
+    width: 8vw;
+    height: 8vw;
+    top: 3vw;
+    left: 3vw;
+  }
+
+  .aboutEmployeeBar-cont-close img {
+    width: 6vw;
+    height: 6vw;
+  }
 }
